tests/reference/asr-template_array_04b-94baaad.stderr
syntax error: Token 'default_behavior' (of type 'identifier') is unexpected here
  --> tests/../integration_tests/template_array_04b.f90:13:18
   |
13 |         requires default_behavior(T)
   |                  ^^^^^^^^^^^^^^^^ 
